# mtaawetucore

./: .gitignore  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
Backend/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
Backend/Backend/: settings.py  urls.py
Backend/Kisii/: admin.py  apps.py  authentication.py  models.py  permissions.py  serializer.py  urls.py  views.py
Backend/Kisii/migrations/: 0001_initial.py  0002_rename_givance_description_kisiireports_grivance_description.py  0003_userprofile.py  0004_alter_userprofile_residency.py  0005_kisiireports_suboptions.py
mtaawetu-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
mtaawetu-frontend/src/: App.tsx
mtaawetu-frontend/src/components/: AnimatedMarker.tsx  Authentication.tsx  BottomSlidePanel.tsx  Button.tsx  DialogueInstructions.tsx  Header.tsx  KisiiForm.tsx  LayerControl.tsx  Loading.tsx  MessageLoginRegister.tsx  Search.tsx  private_route.tsx
mtaawetu-frontend/src/context/: useAuth.tsx
mtaawetu-frontend/src/endpoints/: api.tsx
mtaawetu-frontend/src/routes/: Dashboard.tsx  LandingPage.tsx  LoadingPage.tsx  Login.tsx  Reports.tsx
